index.css: fix right overlap

--- a/www/index.css
+++ b/www/index.css
@@ -138,7 +138,7 @@ header > div {
 #languages-select {
   opacity: 0;
   position: absolute;
-  width: 10em;
+  width: 8em;
   min-height: 3.5em;
 }
 
